# Vispeak

./: .gitignore  GEMINI.md  LICENSE  README.md  README.ru.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: release.yml
docs/: PLAN.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_NOTES_v0.1.1.md  release_notes_v0.1.2.md  release_notes_v0.1.3.md  release_notes_v0.1.4.md  release_notes_v0.1.5.md  release_notes_v0.1.6.md  release_notes_v0.1.7.md  release_notes_v0.1.8.md
src/: App.css  App.tsx  i18n.ts  main.tsx  theme.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  caret_position.rs  ducking.rs  history.rs  hotkeys.rs  icon.rs  lib.rs  main.rs  models.rs  paste.rs  settings.rs  transcribe.rs  vad.rs
src/components/: Logo.tsx  MainWindow.tsx  OverlayWindow.tsx  Sidebar.tsx  UpdateDialog.tsx  UpdaterProvider.tsx
src/components/pages/: AboutPage.tsx  ControlsPage.tsx  GeneralPage.tsx  HistoryPage.tsx  ModelPage.tsx
