[package]
name = "vispeak"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vispeak_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15.3"
hound = "3.5.1"
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread"] }
crossbeam-channel = "0.5.16"
whisper-rs = "0.16.0"
transcribe-rs = { version = "0.3.11", features = ["onnx"] }
transcribe-cpp = { version = "0.1.3" }
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"], default-features = false }
futures-util = "0.3.30"
directories = "5.0"
enigo = "0.1"
clipboard-win = "5.3.0"
image = "0.25.10"
base64 = "0.22.1"
windows = { version = "0.58.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Accessibility"
] }
rodio = "0.19.0"
tauri-plugin-autostart = "2.5.1"
rdev = "0.5.3"
lazy_static = "1.5.0"
ort = { version = "=2.0.0-rc.12", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4.45"

